--- a/themes/jewlery/css/main.css
+++ b/themes/jewlery/css/main.css
@@ -26,9 +26,16 @@ article:last-of-type {
 .basic-section .section-content {
   text-indent: 50px; }
 
+.inner-wrapper {
+  max-width: 75%;
+  margin: 0 auto; }
+
 @media screen and (max-width: 992px) {
   .basic-section .section-title {
     margin-top: 20px; } }
+@media screen and (max-width: 600px) {
+  .inner-wrapper {
+    width: 100%; } }
 .search-container {
   display: inline-block;
   padding-right: 10px;
@@ -131,57 +138,55 @@ article:last-of-type {
 /*------------------------------------*\
                 NAV
 \*------------------------------------*/
-.top-nav {
-  padding: 30px 0; }
-  .top-nav .search-container {
-    display: inline-block;
-    padding-right: 10px;
-    position: relative;
-    width: auto; }
-    .top-nav .search-container input {
-      border-radius: 8px;
-      border: 1px solid #8ed0e8;
-      width: 100%;
-      height: auto; }
-    .top-nav .search-container button {
-      position: absolute;
-      right: 3%;
-      top: 0;
-      background-color: transparent;
-      border: none; }
-      .top-nav .search-container button .fa-search {
-        color: #8ed0e8; }
-  .top-nav .nav-logo-container {
+.top-nav .search-container {
+  display: inline-block;
+  padding-right: 10px;
+  position: relative;
+  width: auto; }
+  .top-nav .search-container input {
+    border-radius: 8px;
+    border: 1px solid #8ed0e8;
+    width: 100%;
+    height: auto; }
+  .top-nav .search-container button {
+    position: absolute;
+    right: 3%;
+    top: 0;
+    background-color: transparent;
+    border: none; }
+    .top-nav .search-container button .fa-search {
+      color: #8ed0e8; }
+.top-nav .nav-logo-container {
+  display: inline-block; }
+  .top-nav .nav-logo-container .header-nav {
     display: inline-block; }
-    .top-nav .nav-logo-container .header-nav {
-      display: inline-block; }
-      .top-nav .nav-logo-container .header-nav ul {
-        list-style: none;
-        padding-left: 0; }
-        .top-nav .nav-logo-container .header-nav ul li {
-          display: inline-block;
-          font-size: 14px; }
-          .top-nav .nav-logo-container .header-nav ul li a {
-            color: #3b3443; }
-    .top-nav .nav-logo-container .left-header-nav li {
-      padding: 0 20px; }
-    .top-nav .nav-logo-container .right-header-nav li {
-      padding: 0 20px; }
-    .top-nav .nav-logo-container .logo-container {
-      display: inline-block; }
-  .top-nav .woocommerce-cart-icon-container {
-    display: inline-block;
-    vertical-align: middle;
-    padding-left: 10px; }
-    .top-nav .woocommerce-cart-icon-container a {
-      color: grey; }
+    .top-nav .nav-logo-container .header-nav ul {
+      list-style: none;
+      padding-left: 0; }
+      .top-nav .nav-logo-container .header-nav ul li {
+        display: inline-block;
+        font-size: 14px; }
+        .top-nav .nav-logo-container .header-nav ul li a {
+          color: #3b3443; }
+  .top-nav .nav-logo-container .left-header-nav li {
+    padding: 0 20px; }
+  .top-nav .nav-logo-container .right-header-nav li {
+    padding: 0 20px; }
+  .top-nav .nav-logo-container .logo-container {
+    display: inline-block; }
+.top-nav .woocommerce-cart-icon-container {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 10px; }
+  .top-nav .woocommerce-cart-icon-container a {
+    color: grey; }
 
 /*------------------------------------*\
                 BANNER ALERT
 \*------------------------------------*/
 .banner-alert {
   background-color: #e4c3cf;
-  padding: 10px 0; }
+  padding: 5px 0; }
   .banner-alert p {
     margin-bottom: 0; }
 
