--- a/themes/jewlery/sass/common.scss
+++ b/themes/jewlery/sass/common.scss
@@ -58,8 +58,8 @@ article:last-of-type{
         }
     }
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 480px){
     .inner-wrapper {
-        width: 100%;
+        max-width: 90%;
     }
 }
