--- a/themes/jewlery/css/main.css
+++ b/themes/jewlery/css/main.css
@@ -33,9 +33,9 @@ article:last-of-type {
 @media screen and (max-width: 992px) {
   .basic-section .section-title {
     margin-top: 20px; } }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   .inner-wrapper {
-    width: 100%; } }
+    max-width: 90%; } }
 .search-container {
   display: inline-block;
   padding-right: 10px;
