--- a/themes/jewlery/sass/common.scss
+++ b/themes/jewlery/sass/common.scss
@@ -3,6 +3,14 @@
 * {
     font-family: 'Open Sans', sans-serif;
 }
+html {
+    height: 100%;
+    overflow: hidden;
+}
+body {
+    overflow: auto;
+    height: 100%;
+}
 h1{
 
 }
@@ -27,14 +35,16 @@ font-size: 14px;
 line-height: 28px;
 }
 section {
-    padding: 40px 0;
+    padding: 40px 0 0 0px;
 }
 article {
-    padding: 40px 0;
+    padding: 5px 0;
     border-bottom: 2px solid $pink;
 }
 article:last-of-type{
     border-bottom: 0;
+    padding: 0;
+    padding-top: 20px;
 }
 .basic-section{
     .basic-section-image{
