--- a/themes/jewlery/sass/footer.scss
+++ b/themes/jewlery/sass/footer.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: $purple;
-    padding: 30px 0;
+    padding: 30px 0 10px 0 ;
     .footer-nav{
         overflow: auto;
         ul {
@@ -8,11 +8,12 @@
             li {
                 width: 25%;
                 float: left;
+                padding-left: 25px;
                 list-style: none;
                 margin-bottom: 10px;
                 a {
                     color: $white;
-                    font-size: 15px
+                    font-size: 15px;
                 }
             }
         }
@@ -21,6 +22,8 @@
             margin-bottom: 10px;
             color: $white;
             font-size: 15px;
+            padding-left: 25px;
+
         }
     }
     .copyright {
@@ -28,7 +31,7 @@
         clear: both;
         font-size: 14px;
         color: $white;
-        margin: 20px 0;
+        margin: 20px 0 0 0;
     }
 }
 @media screen and (max-width: 992px){
@@ -52,7 +55,14 @@
                 padding-left: 0;
                 li {
                     width: 100%;
+                    padding-left: 0;
+                    a{
+                        padding-left: 0;
+                    }
                 }
+            }
+            .email-contact {
+                padding-left: 0;
             }
         }
     }
