--- a/themes/jewlery/sass/header.scss
+++ b/themes/jewlery/sass/header.scss
@@ -188,6 +188,9 @@
 \*------------------------------------*/
 
 .banner-alert {
+    -webkit-box-shadow: inset -2px 14px 5px -10px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset -2px 14px 5px -10px rgba(0,0,0,0.1);
+    box-shadow: inset -2px 14px 5px -10px rgba(0,0,0,0.1);
     background-color: $pink;
     padding: 5px 0;
     p{
