--- a/themes/jewlery/css/main.css
+++ b/themes/jewlery/css/main.css
@@ -21,7 +21,7 @@ section {
   padding: 30px 0 0 0px; }
 
 article {
-  padding: 5px 0;  }
+  padding: 0;  }
 
 article:first-of-type {
   border-bottom: 2px solid #e4c3cf;
@@ -379,4 +379,7 @@ article:last-of-type {
     width: 100%;
     height: auto; } }
 
+
+
 /*# sourceMappingURL=main.css.map */
+
