--- a/themes/jewlery/sass/common.scss
+++ b/themes/jewlery/sass/common.scss
@@ -35,17 +35,20 @@ font-size: 14px;
 line-height: 28px;
 }
 section {
-    padding: 40px 0 0 0px;
+    padding: 30px 0 0 0px;
 }
 article {
-    padding: 5px 0;
-    border-bottom: 2px solid $pink;
+    padding: 0;
 }
-article:last-of-type{
+article:first-of-type {
+    border-bottom: 2px solid #e4c3cf;
+}
+
+article:last-of-type {
     border-bottom: 0;
     padding: 0;
-    padding-top: 20px;
-}
+    padding-top: 20px; }
+
 .basic-section{
     .basic-section-image{
         width: 100%;
