--- a/themes/jewlery/sass/shop.scss
+++ b/themes/jewlery/sass/shop.scss
@@ -18,7 +18,7 @@
         font-size: 14px;
     }
 }
-.woocommerce-shop-container {
+.woocommerce-shop-container, .woocommerce-single-product-container {
     margin-top: -450px;
     .shop-list-wrapper {
         background-color: $white;
@@ -86,6 +86,40 @@
  .sidebar {
      display: none;
  }
+
+
+/*------------------------------------*\
+            SINGLE PRODUCT
+\*------------------------------------*/
+.woocommerce-single-product-container{
+    margin-top: -350px;
+    
+    
+}
+.woocommerce div.product .product_title{
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+.woocommerce div.product p.price, .woocommerce div.product span.price{
+    color: black;
+    font-size: 25px;
+    display: inline-block;
+    margin-right: 20px;
+}
+.woocommerce div.product form.cart{
+    display: inline-block;
+    margin-bottom: 0;
+}
+.woocommerce-product-rating {
+    a {
+        display: none;
+    }
+}
+.woocommerce .star-rating{
+    font-size: 1.5em;
+}
+
+
  @media screen and (max-width: 576px){
      .full-width-mobile-container {
          padding: 0;
