--- a/themes/jewlery/sass/header.scss
+++ b/themes/jewlery/sass/header.scss
@@ -157,9 +157,14 @@
                 }
             }
         }
+
         .left-header-nav{
             li {
                 padding: 0 20px;
+            }
+
+            #menu-left-header-menu-1{
+              padding-left: 40px;
             }
         }
         .right-header-nav{
@@ -240,6 +245,11 @@
         .nav-logo-container{
             .header-nav{
                 ul{
+
+                    #menu-left-header-menu-1{
+                      padding-left: 0;
+                    }
+
                     li {
                         padding: 0 15px;
                     }
