--- a/themes/jewlery/css/main.css
+++ b/themes/jewlery/css/main.css
@@ -182,9 +182,26 @@ article:last-of-type {
       padding-left: 0; }
       .top-nav .nav-logo-container .header-nav ul li {
         display: inline-block;
-        font-size: 14px; }
+        font-size: 14px;
+        position: relative; }
         .top-nav .nav-logo-container .header-nav ul li a {
           color: #3b3443; }
+      .top-nav .nav-logo-container .header-nav ul li:hover > ul {
+        display: block; }
+        .top-nav .nav-logo-container .header-nav ul li:hover > ul li {
+          overflow: visible;
+          padding: 0;
+          padding: 5px 16px; }
+      .top-nav .nav-logo-container .header-nav ul .sub-menu {
+        display: none;
+        position: absolute;
+        background: #fff;
+        border: 1px black;
+        z-index: 1; }
+        .top-nav .nav-logo-container .header-nav ul .sub-menu li {
+          overflow: hidden;
+          border-bottom: 1px solid #e5e5e5;
+          min-width: 140px; }
   .top-nav .nav-logo-container .left-header-nav li {
     padding: 0 20px; }
   .top-nav .nav-logo-container .left-header-nav #menu-left-header-menu-1 {
