--- a/themes/jewlery/sass/shop.scss
+++ b/themes/jewlery/sass/shop.scss
@@ -19,12 +19,14 @@
     }
 }
 .woocommerce-shop-container, .woocommerce-single-product-container {
-    margin-top: -450px;
+    padding: 0;
     .shop-list-wrapper {
         background-color: $white;
         padding: 20px 10px 0 20px;
-        border:2px solid $pink;
+        border: 2px solid $pink;
         border-bottom: 0;
+        border-top: 0;
+        height: 100%;
         .woocommerce-products-header {
             float: left;
             width: 50% ;
@@ -92,9 +94,6 @@
             SINGLE PRODUCT
 \*------------------------------------*/
 .woocommerce-single-product-container{
-    margin-top: -350px;
-    
-    
 }
 .woocommerce div.product .product_title{
     font-size: 15px;
