--- a/themes/jewlery/sass/home.scss
+++ b/themes/jewlery/sass/home.scss
@@ -35,6 +35,7 @@
             color: $white;
             width: 100%;
             transform:translate(-50%, -50%);
+            padding: 0 20px;
             .intention-title {
                 display: inline-block;
                 padding-bottom: 5px;
