have image stick to bottom if div is of the team

--- a/themes/jewlery/css/main.css
+++ b/themes/jewlery/css/main.css
@@ -31,6 +31,13 @@ article:last-of-type {
   padding: 0;
   padding-top: 20px; }
 
+.basic-section .chris_sher {
+  display: flex;
+  align-items: flex-end !important; }
+
+.basic-section .chris_sher img {
+  vertical-align: bottom; }
+
 .basic-section .basic-section-image {
   width: 100%; }
 
