--- a/themes/jewlery/sass/common.scss
+++ b/themes/jewlery/sass/common.scss
@@ -50,6 +50,16 @@ article:last-of-type {
     padding-top: 20px; }
 
 .basic-section{
+
+    .chris_sher {
+        display: flex;
+        align-items: flex-end !important;
+    }
+
+    .chris_sher img {
+        vertical-align: bottom;
+    }
+
     .basic-section-image{
         width: 100%;
     }
